--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "dreamhouse-ionic3",
+  "name": "UrStatus",
   "app_id": "",
-  "v2": true,
-  "typescript": true
+  "integrations": {},
+  "type": "ionic-angular"
 }
