--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "2.0.1",
+    "highcharts": "^6.1.0",
     "ionic-angular": "3.0.1",
+    "ionic-material": "^0.4.1",
     "ionicons": "3.0.0",
     "leaflet": "^1.0.3",
     "rxjs": "5.1.1",
