--- a/package.json
+++ b/package.json
@@ -1,79 +1,54 @@
 {
-    "name": "dreamhouse",
-    "version": "0.0.0",
-    "author": "Christophe Coenraets",
-    "homepage": "http://coenraets.org/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
-    },
-    "dependencies": {
-        "@angular/common": "4.0.0",
-        "@angular/compiler": "4.0.0",
-        "@angular/compiler-cli": "4.0.0",
-        "@angular/core": "4.0.0",
-        "@angular/forms": "4.0.0",
-        "@angular/http": "4.0.0",
-        "@angular/platform-browser": "4.0.0",
-        "@angular/platform-browser-dynamic": "4.0.0",
-        "@ionic-native/core": "3.4.2",
-        "@ionic-native/splash-screen": "3.4.2",
-        "@ionic-native/status-bar": "3.4.2",
-        "@ionic/storage": "2.0.1",
-        "chart.js": "^2.7.2",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-ionic-keyboard": "^2.0.5",
-        "cordova-plugin-ionic-webview": "^1.2.0",
-        "cordova-plugin-splashscreen": "^5.0.2",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "csv-parse": "^2.2.0",
-        "d3": "^5.1.0",
-        "highcharts": "^6.1.0",
-        "ionic-angular": "3.0.1",
-        "ionic-material": "^0.4.1",
-        "ionicons": "3.0.0",
-        "leaflet": "^1.0.3",
-        "ng2-charts": "^1.6.0",
-        "rxjs": "5.1.1",
-        "sw-toolbox": "3.4.0",
-        "zone.js": "^0.8.4"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "1.3.0",
-        "@types/d3": "5.0.0",
-        "typescript": "~2.2.1"
-    },
-    "cordovaPlugins": [
-        "cordova-plugin-whitelist",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-console",
-        "cordova-plugin-device",
-        "cordova-plugin-splashscreen",
-        "ionic-plugin-keyboard"
-    ],
-    "cordovaPlatforms": [
-        "ios",
-        {
-            "platform": "ios",
-            "version": "",
-            "locator": "ios"
-        }
-    ],
-    "description": "dreamhouse sample app",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-device": {},
-            "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {}
-        },
-        "platforms": [
-            "ios"
-        ]
+  "name": "dreamhouse",
+  "version": "0.0.0",
+  "author": "Christophe Coenraets",
+  "homepage": "http://coenraets.org/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@ionic-native/core": "3.4.2",
+    "@ionic-native/splash-screen": "3.4.2",
+    "@ionic-native/status-bar": "3.4.2",
+    "@ionic/storage": "2.0.1",
+    "ionic-angular": "3.0.1",
+    "ionicons": "3.0.0",
+    "leaflet": "^1.0.3",
+    "rxjs": "5.1.1",
+    "sw-toolbox": "3.4.0",
+    "zone.js": "^0.8.4"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "1.3.0",
+    "typescript": "~2.2.1"
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-whitelist",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-console",
+    "cordova-plugin-device",
+    "cordova-plugin-splashscreen",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": [
+    "ios",
+    {
+      "platform": "ios",
+      "version": "",
+      "locator": "ios"
     }
+  ],
+  "description": "dreamhouse sample app"
 }
